# examples

C++/: .gitignore
C++/DataStructure/Basic/: hello_world.cpp
C++/DataStructure/D/: Cartesian.cc  Cartesian.h  Coordinate.h  Makefile  Polar.cc  Polar.h  ex14.cc
C++/DataStructure/LinkedList/: LinkedList.cpp
C++/DataStructure/RemoveDupInString/: main.cpp
C++/DesignPattern/: Visitor.cpp  Visitor_fei.cpp  Visitor_typeid.cpp
Cmake/: .gitignore
Cmake/hello_world/: CMakeLists.txt  HelloWorld.cpp
Cmake/student/: CMakeLists.txt
Go/: basics.go  mypackage.go
Gradle/buildsrc/: build.gradle
Gradle/cpp_lib/: build.gradle  settings.gradle
Gradle/cpp_lib/src/main/cpp/: hello.cpp
Gradle/cpp_lib/src/main/public/: cpp_lib.h
Gradle/cpp_lib/src/test/cpp/: hello_test.cpp
Gradle/cpp_lib_app/: build.gradle
Gradle/cpp_lib_app/src/main/cpp/: main.cpp
Gradle/cpp_lib_app_ext/: build.gradle
Gradle/cpp_lib_app_ext/hello-lib/: build.gradle  settings.gradle
Gradle/cpp_lib_app_ext/hello-lib/src/main/cpp/: hello.cxx
Gradle/cpp_lib_app_multi/: build.gradle  settings.gradle
Gradle/cpp_lib_app_new/: settings.gradle
Gradle/cpp_lib_app_new/hello-lib/: build.gradle
Gradle/cpp_lib_app_new/hello-lib/src/main/public/: hello.h
Gradle/greeting_1/: build.gradle  settings.gradle
Gradle/greeting_2/: build.gradle  settings.gradle
Gradle/greeting_2/src/main/groovy/fei/gradle/: GreetingPlugin.groovy
Gradle/greeting_3/: build.gradle
Gradle/hello_world/: .gitignore  build.gradle  other.gradle  settings.gradle
Gradle/new_plugin/: build.gradle  settings.gradle
Gradle/plugin_sourceset/: build.gradle
Gradle/use_greeting_2/: build.gradle  settings.gradle
Gradle/use_new_plugin/: build.gradle  settings.gradle
Groovy/: basics.groovy
Java/: .gitignore
Java/DesignPatterns/Factory/: BigUfoEnemyShip.java  EnemyShip.java  EnemyShipFactTest.java  EnemyShipFactory.java  EnemyShipTest.java  RocketEnemyShip.java  UfoEnemyShip.java
Java/DesignPatterns/Strategy/: Animal.java  AnimalFly.java  Bird.java  Dog.java  Fly.java
Java/example1/: Animal.java  Cat.java  Creature.java  Dog.java  Giraffe.java  Living.java  Monkey.java  basics.java
JavaScript/: basics.js  index.html  index.js  string_func.js
Kotlin/: basics.kt
Maven/: .gitignore
Maven/quickstart/: pom.xml
Maven/quickstart/src/main/java/conda.activate.root/: App.java
Maven/quickstart/src/test/java/conda.activate.root/: AppTest.java
Nodejs/: basics.js  count.js
Python/: .gitignore
Python/example1/: basics.py  calc.py  college_admi_alg.py  employee.txt  games.py  most_common_words.py  student_data.csv  test_calc.py  test_module.py
Python/example1/multithreading/: futures.py  multi_threading.py
Python/example1/numpy/: np_basics.py
Python/extension/: hello_world.cpp  setup.py
